# persianempire-plugins

./: .travis.yml  Makefile.am  README.md  Rules-po.mak  Rules_noxml-po.mak  Rules_pureprestige.mak  build.sh  configure.ac  xml2po.py
.github/workflows/: persianempireplugins.yml
AirPlayer/po/: AirPlayer.pot
AirPlayer/src/: AirTunes.py  Makefile.am  __init__.py  appletv.py  httputil.py  plugin.py  protocol_handler.py  rtsp.py  websocket.py  zeroconfig
BlockContent/po/: BlockContent.pot  Makefile.am
BlockContent/src/: Makefile.am  plugin.py
BouquetProtection/po/: BouquetProtection.pot  Makefile.am  ru.po
BouquetProtection/src/: BouquetProtect.py  Makefile.am  __init__.py  plugin.py
CCcamInfo/po/: CCcamInfo.pot  Makefile.am  cz.po  de.po  es.po  fa.po  it.po  nl.po  pl.po  sr.po  tr.po
CCcamInfo/src/: Makefile.am  plugin.py
CI/: build.sh
CamRestart/po/: CamRestart.pot  Makefile.am
CamRestart/src/: Makefile.am  plugin.py
DeviceInfo/: Makefile.am
DeviceInfo/converter/: ProgressDiskSpaceInfo.py
DeviceInfo/po/: DeviceInfo.pot  Makefile.am
DeviceInfo/src/: Makefile.am  plugin.py
DownloadManager/po/: DownloadManager.pot  Makefile.am
DownloadManager/src/: Makefile.am  plugin.py
FontMagnifier/po/: FontMagnifier.pot  Makefile.am  de.po  en.po  fa.po  it.po  nl.po  pl.po
FontMagnifier/src/: Makefile.am  __init__.py  plugin.py
LocaleManager/po/: LocaleManager.pot  Makefile.am
LocaleManager/src/: Makefile.am  __init__.py  plugin.py  ui.py
MountManager/po/: Makefile.am  MountManager.pot
MountManager/src/: HddMount.py  Makefile.am  Manager.py  __init__.py  plugin.py
NaviBarPE/po/: Makefile.am  NaviBarPE.pot
NaviBarPE/src/: Makefile.am  dirSelect.py  plugin.py
NetworkServer/po/: Makefile.am  NetworkServer.pot
NetworkServer/src/: Makefile.am  __init__.py  dirSelect.py  plugin.py  setupNfs.py  setupSamba.py
PECamManager/po/: Makefile.am  PECamManager.pot
PECamManager/src/: Makefile.am  Manager.py  Softcam.py  Startup.py  __init__.py  plugin.py
PEFAQ/po/: Makefile.am  PEFAQ.pot
PEFAQ/src/: Makefile.am  PEFAQs.xml  plugin.py
PEInfo/po/: Makefile.am  PEInfo.pot
PEInfo/src/: Makefile.am  plugin.py
PEPanel/: Makefile.am
PEPanel/binary/: Makefile.am
PEPanel/po/: Makefile.am  PEPanel.pot
PEPanel/src/: About.py  Addons.py  BackupRestore.py  DaemonsList.py  HddInfo.py  HddMount.py  HddPartitions.py  HddSetup.py  Ipkinstall.py  Makefile.am  Memory.py  Scripts.py  Swap.py  __init__.py  bitrate.py  plugin.py  skin.xml  skins.py
PEPanel/src/Daemons/: Crond.ext  Dropbear.ext  Makefile.am  NTPd.ext  Nfsd.ext  OpenVPN.ext  Samba.ext  Syslogd.ext  Telnet.ext  Vsftpd.ext
PESpeedUp/po/: PESpeedUp.pot  ru.po  uk.po
PESpeedUp/src/: __init__.py  plugin.py
PEWeather/po/: Makefile.am  PEWeather.pot
PEWeather/src/: Makefile.am  plugin.py
PackageManager/po/: Makefile.am  PackageManager.pot
PackageManager/src/: plugin.py
PurePrestige/etc/: Makefile.am  PurePrestigefeeds.xml
PurePrestige/po/: Makefile.am  PurePrestige.pot  ServiceEditor.pot  de.po  es.po  fa.po  it.po  tr.po
PurePrestige/src/: Console2.py  Makefile.am  Sysinfo.py  keymap.xml  plugin.py  pyo2xml  soupparse.py
PurePrestige/src/Applications/: Makefile.am  plugin.py
PurePrestige/src/Applications/NetRadioPersian/: Makefile.am  plugin.py  stations
PurePrestige/src/Applications/NetRadioPersian/buttons/: Makefile.am
PurePrestige/src/Applications/NetRadioPersian/icons/: Makefile.am
PurePrestige/src/Applications/PersianLiveSoccer/: Makefile.am  htmlentitydefs.py  markupbase.py  plugin.py  sgmllib.py
PurePrestige/src/Applications/PersianLiveSoccer/images/: Makefile.am
PurePrestige/src/Applications/appbuttons/: Makefile.am
PurePrestige/src/PurePrestigeAddOnsManager/: Makefile.am  plugin.py  pplayer.py
PurePrestige/src/PurePrestigeAddOnsManager/SpinnerSelector/: Makefile.am  Spinner.py  SpinnerSelectionBox.py  SpinnerSelector.py  plugin.py
PurePrestige/src/Stools/: Makefile.am  MenuUninstaller.py  SetBackupRestore.py  feeds.py  folderuninstaller.py  myNumericalTextInput.py  packuninstaller.py  passresetter.py  plugin.py  setloader.py  skinuninstaller.py
PurePrestige/src/Stools/Moretools/: Makefile.am  crashreader.py  datetimechanger.py  download.py  languageone.py  plugin.py
PurePrestige/src/Stools/Moretools/Cronmanager/: Makefile.am  plugin.py
PurePrestige/src/Stools/Moretools/ScreenGrabber/: Makefile.am  ScreenGrabber.py  picplayer.py
PurePrestige/src/Stools/Moretools/ScreenGrabber/keymaps/: Makefile.am
PurePrestige/src/Stools/Moretools/language/: Language.py  Makefile.am
PurePrestige/src/Stools/Moretools/moretoolsbuttons/: Makefile.am
PurePrestige/src/Stools/PPFlashBackup/: BackupLocation.py  BackupStartopenTelnet.py  Consoleall.py  Consolef.py  Makefile.am  plugin.py
PurePrestige/src/Stools/PPFlashBackup/images/: Makefile.am
PurePrestige/src/Stools/PPrestigesatEditor/: Makefile.am  satedithd.py  sateditsd.py  satellite.py
PurePrestige/src/Stools/PPrestigesatEditor/ServiceEditor/: ConfigHexNumber.py  Lamedb.py  Makefile.am  Transponder.py  __init__.py  plugin.py
PurePrestige/src/Stools/toolsbuttons/: Makefile.am
PurePrestige/src/buttons/: Makefile.am
PurePrestige/src/ddbuttons/: Makefile.am
PurePrestige/src/icons/: Makefile.am
PurePrestige/src/images/: Makefile.am
PurePrestige/src/infobuttons/: Makefile.am
PurePrestige/src/nbuttons/: Makefile.am
PurePrestige/src/panelbuttons/: Makefile.am
PurePrestige/src/rssicons/: Makefile.am
PurePrestige/src/scripts/: Delete_all_Crashlogs.sh  Kernel.sh  Makefile.am  Network.sh  Performance_HDD.sh  Second_stage.sh  devices.sh  getinfo.sh  swap.sh  swap128.sh  swap128usb.sh  swap256.sh  swap256usb.sh  swap512.sh  swap512usb.sh  swap64.sh  swap64usb.sh  swapof.sh  swapofusb.sh  swapon.sh  swaponusb.sh  swapusb.sh
QuickWeather/po/: Makefile.am  QuickWeather.pot  de.po  ru.po
QuickWeather/src/: Makefile.am  keymap.xml  plugin.py  weathericons.cfg
SambaServer/po/: Makefile.am  SambaServer.pot
SambaServer/src/: Makefile.am  plugin.py
SatelliteEditor/po/: Makefile.am  (+1 more)
(+74 files in other folders)
